# terrabox

./: .env  .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  add_example_toolkit.py  check_db_schema.py  pyproject.toml  terralink_platform.db  test_acceptance.py  test_connection_tool_control.py
docs/: google_oauth_setup.md  oauth_frontend_integration.md
examples/: example_usage.py
migrations/: add_oauth_tables.sql
out.zarr/: zarr.json
out.zarr/band/: zarr.json
out.zarr/band/c/: 0
out.zarr/data/: zarr.json
out.zarr/time/: zarr.json
out.zarr/x/: zarr.json
out.zarr/y/: zarr.json
scripts/: init_db.py  init_test_oauth_providers.py  update_github_oauth_config.py
src/: terralink_platform.db
src/terrabox/: __init__.py  extensions.py  main.py
src/terrabox/core/: background_tasks.py  mcp_server.py  registry.py  security.py
src/terrabox/db/: models.py
src/terrabox/routers/: __init__.py  auth.py  deps.py  factory.py  tools.py
src/terrabox/toolkits/: __init__.py  bash.py  bing_search.py  github.py  ipython_code.py  piston.py
src/terrakit/: data.py  extensions.py  main.py
src/terrakit/core/: background_tasks.py  mcp_server.py  oauth_service.py  registry.py  runtime_registry.py  schemas.py  security.py  tool_registry.py
src/terrakit/db/: models.py
src/terrakit/routers/: analytics.py  async_tools.py  auth.py  connections.py  tools.py
src/terrakit/toolkits/: bash.py  bing_search.py  example.py  geobasic.py  geopatch.py  github.py  ipython_code.py  piston.py  stac_basic.py
src/terralink_platform/: __init__.py  config.py  data.py  extensions.py  main.py  models.py  security.py
src/terralink_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/terralink_platform/core/: background_tasks.py  oauth_config.py  oauth_service.py  schemas.py  services.py  tool_registry.py
src/terralink_platform/db/: models.py  session.py
tests/: test_acceptance.py  test_auth.py  test_auth_api_key_validation.py  test_authentication.py  test_connection_tool_control.py  test_encryption.py  test_geopatch.py  test_math_add_fix.py  test_oauth.py  test_piston_min.py  test_platform.py  test_stac.py  test_stac_async.py  test_stac_fixed.py  test_tool_geobasic.py
(+38 files in other folders)
