[project]
name = "terralink-platform"
version = "0.1.0"
description = "Platform backend for the Terralink SDK"
authors = [
  { name = "Terralink", email = "info@example.com" }
]
dependencies = [
  "fastapi>=0.100.0",
  "uvicorn>=0.22.0",
  "pydantic>=2.5.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
]

[tool.setuptools]
package-dir = {"" = "src"}
