[project]
name = "terralink-platform"
version = "0.1.0"
description = "Platform backend for the Terralink SDK"
authors = [
  { name = "Terralink", email = "xiongzhitong@gmail.com" }
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.23",
  "pydantic>=2.6",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "argon2-cffi>=23.1.0",
  "passlib>=1.7.4",
  "python-jose>=3.3.0",
  "email-validator>=2.1",
  "python-dotenv>=1.0",
  "redis>=5.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
]

[tool.setuptools]
package-dir = {"" = "src"}
